<?xml version="1.0"?>
<package>
    <name>rc_bagthrottler</name>
    <version>0.0.1</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="christian.emmerich@roboception.de">Christian Emmerich</maintainer>
    <author email="christian.emmerich@roboception.de">Christian Emmerich</author>
    <license>Custom</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rc_msgs</build_depend>
    <build_depend>roscpp</build_depend>
</package>