<?xml version="1.0"?>
<package>
    <name>rc_bagthrottler</name>
    <version>0.0.1</version>
    <description>
        This package provides functionalities to throttle the output of
        rosbag on user-defined topics (i.e. to ensure deterministic computation
        of ros nodes).
    </description>
    <maintainer email="christian.emmerich@roboception.de">Christian Emmerich</maintainer>
    <author email="christian.emmerich@roboception.de">Christian Emmerich</author>
    <license>Custom</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rc_msgs</build_depend>
    <build_depend>roscpp</build_depend>
</package>