<?xml version="1.0"?>
<package>
    <name>rc_bagthrottler</name>
    <version>0.1.0</version>
    <description>
        This package provides functionalities to throttle the output of
        rosbag on user-defined topics (e.g. to ensure deterministic computation
        of ros nodes).
    </description>
    <maintainer email="christian.emmerich@roboception.de">Christian Emmerich</maintainer>
    <author email="christian.emmerich@roboception.de">Christian Emmerich</author>
    <license>Custom</license>
    <run_depend>message_runtime</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
</package>